# zigbee-gateway_v1

./: .clang-tidy  .gitignore  ARCHITECTURE.md  ARCH_COMPLIANCE_MATRIX.md  CMakeLists.txt  CODING_GUIDELINES.md  OTA_RELEASE.md  README.md  TEAM_WORKFLOW.md  check_arch_invariants.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6
arh/: Fix1.md
cmake/: ProjectCompileOptions.cmake
components/app_hal/: CMakeLists.txt  hal_led.c  hal_matter.c  hal_mdns.c  hal_mqtt.c  hal_nvs.c  hal_ota.c  hal_rcp.c  hal_rcp_uart_backend.c  hal_spiffs.c  hal_wifi.c  hal_zigbee.c  idf_component.yml  ota_release_manifest_pub.pem  ota_release_manifest_pub_next.pem  ota_server_root_ca.pem
components/app_hal/include/: hal_led.h  hal_matter.h  hal_mdns.h  hal_mqtt.h  hal_nvs.h  hal_ota.h  hal_rcp.h  hal_spiffs.h  hal_wifi.h  hal_zigbee.h  hal_zigbee_test.h
components/core/: CMakeLists.txt  core_command_dispatcher.cpp  core_event_bus.cpp  core_reducer.cpp  core_registry.cpp
components/core/include/: core_commands.hpp  core_effects.hpp  core_errors.hpp  core_event_bus.hpp  core_events.hpp  core_registry.hpp  core_state.hpp
components/matter_bridge/: CMakeLists.txt  README.md  matter_bridge.cpp  matter_device_map.cpp
components/matter_bridge/include/: matter_bridge.hpp  matter_endpoint_map.hpp
components/mqtt_bridge/: CMakeLists.txt  mqtt_bridge.cpp  mqtt_device_sync.cpp  mqtt_discovery.cpp  mqtt_serializer.cpp  mqtt_topics.cpp
components/mqtt_bridge/include/: mqtt_bridge.hpp  mqtt_bridge_test_access.hpp  mqtt_discovery.hpp  mqtt_serializer.hpp  mqtt_topics.hpp
components/service/: CMakeLists.txt  application_command_mapper.cpp  bridge_snapshot_builder.cpp  command_manager.cpp  config_manager.cpp  connectivity_manager.cpp  device_identity_store.cpp  device_manager.cpp  devices_api_snapshot_builder.cpp  effect_executor.cpp  hal_event_adapter.cpp  hal_event_adapter_internal.hpp  network_manager.cpp  network_policy_manager.cpp  operation_result_store.cpp  ota_bootstrap.cpp  ota_manager.cpp  ota_manifest.cpp  ota_transport_policy.cpp  ota_trust_store.cpp  persistence_manager.cpp  rcp_transport_policy.cpp  rcp_update_manager.cpp  read_model_coordinator.cpp  reporting_manager.cpp  scan_manager.cpp  service_runtime.cpp  state_persistence_coordinator.cpp  tuya_contact_sensor_plugin.cpp  tuya_dp_parser.cpp  tuya_fingerprint.cpp  tuya_init_coordinator.cpp  tuya_plugin_registry.cpp  tuya_switch_plugin.cpp  tuya_translator.cpp  zigbee_lifecycle_coordinator.cpp
components/service/include/: application_command_mapper.hpp  application_requests.hpp  bridge_snapshot_builder.hpp  command_manager.hpp  config_manager.hpp  connectivity_manager.hpp  device_identity_store.hpp  device_manager.hpp  devices_api_snapshot_builder.hpp  effect_executor.hpp  matter_runtime_api.hpp  network_manager.hpp  network_policy_manager.hpp  operation_result_store.hpp  ota_bootstrap.hpp  ota_manager.hpp  ota_manifest.hpp  ota_transport_policy.hpp  ota_trust_store.hpp  persistence_manager.hpp  rcp_transport_policy.hpp  rcp_update_manager.hpp  read_model_coordinator.hpp  reporting_manager.hpp  runtime_lock.hpp  scan_manager.hpp  service_public_types.hpp  service_runtime.hpp  service_runtime_api.hpp  service_runtime_test_access.hpp  state_persistence_coordinator.hpp  tuya_contact_sensor_plugin.hpp  tuya_dp_parser.hpp  tuya_fingerprint.hpp  tuya_init_coordinator.hpp  tuya_payload_view.hpp  tuya_plugin.hpp  tuya_plugin_registry.hpp  tuya_switch_plugin.hpp  tuya_translator.hpp  (+1 more)
components/web_ui/: CMakeLists.txt  web_handler_common.cpp  web_handler_common.hpp  web_handlers_config.cpp  web_handlers_device.cpp  web_handlers_network.cpp  web_handlers_ota.cpp  web_handlers_rcp.cpp  web_handlers_static.cpp  web_routes.cpp  web_server.cpp
components/web_ui/assets/: app.js  index.html  style.css
components/web_ui/include/: web_dto.hpp  web_routes.hpp  web_server.hpp
coverage-report/: index.config_manager.cpp.aaec25b9253129fa8322e6cf47258a31.html  index.core_command_dispatcher.cpp.86c1aec31429c6a67e69f21d2e284381.html  index.core_event_bus.cpp.8244f1fada9c13c650ce46b643523bbc.html  index.core_reducer.cpp.5274544016cea924447bc0d0ed37af29.html  index.core_registry.cpp.841c72d1206bbfaf295e016268e7add2.html  index.core_registry.hpp.25da16ea28e63fae9ed2a5c3b4db1c89.html  index.core_state.hpp.d8476f50a27afb0a5e255d82eb483f32.html  index.effect_executor.cpp.abd915609dbf03f49f44cd56192a0b0d.html  index.functions.html  index.html  (+2 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
test/host/: CMakeLists.txt  test_application_command_mapper.cpp  test_config_manager_migration.cpp  test_core_effects.cpp  test_core_event_bus.cpp  test_core_reducer.cpp  test_core_registry.cpp  test_device_identity_store.cpp  test_hal_wifi_scan.cpp  test_matter_bridge.cpp  test_matter_device_map.cpp  test_matter_runtime_attach_contract.cpp  test_matter_runtime_command_loop.cpp  test_matter_runtime_feed.cpp  test_matter_runtime_robustness.cpp  test_matter_snapshot_semantics.cpp  test_mqtt_bridge_commands.cpp  test_mqtt_device_sync.cpp  test_mqtt_discovery.cpp  test_mqtt_runtime_feed.cpp  test_mqtt_serializer.cpp  test_mqtt_status_runtime_feed.cpp  test_mqtt_topics.cpp  test_operation_result_store.cpp  test_ota_bootstrap.cpp  test_ota_manifest.cpp  test_read_model_coordinator.cpp  test_service_config_bootstrap.cpp  test_service_force_remove.cpp  test_service_hal_adapter.cpp  test_service_join_policy.cpp  test_service_network_autoconnect_limit.cpp  test_service_network_connect.cpp  test_service_network_no_reconnect.cpp  test_service_network_policy_state_access.cpp  test_service_network_reconnect.cpp  test_service_network_scan.cpp  test_service_network_timeout.cpp  test_service_ota.cpp  test_service_rcp.cpp  (+29 more)
test/integration/: CMakeLists.txt  README.md  test_integration_hal_platform_shims.cpp  test_integration_web_handlers_device.cpp  test_integration_web_handlers_ota.cpp  test_integration_web_handlers_rcp.cpp  test_integration_web_handlers_static.cpp  test_integration_web_routes.cpp  test_integration_web_server.cpp
web/: app.js  (+3 more)
(+72 files in other folders)
